JumpScript/tests/baselines/reference/exportAssignmentConstrainedGenericType.errors.txt
tests/cases/conformance/externalModules/foo_1.jump(2,17): error TS2345: Argument of type 'true' is not assignable to parameter of type '{ a: string; b: number; }'.


==== tests/cases/conformance/externalModules/foo_1.jump (1 errors) ====
    import foo = require("./foo_0");
    var x = new foo(true); // Should error
                    ~~~~
!!! error TS2345: Argument of type 'true' is not assignable to parameter of type '{ a: string; b: number; }'.
    var y = new foo({a: "test", b: 42}); // Should be OK
    var z: number = y.test.b;
==== tests/cases/conformance/externalModules/foo_0.jump (0 errors) ====
    class Foo<T extends {a: string; b:number;}>{
    	test: T;
    	constructor(x: T){}
    }
    
    export = Foo;
    